fix gap issue of non-overflowing grid views (fixes #2) and trim file names to one line

--- a/static/css/directory/grid.css
+++ b/static/css/directory/grid.css
@@ -10,6 +10,7 @@ main button {
 	padding: 95px 5px 5px;
 	border: none;
 	background: none;
+	height: fit-content;
 }
 
 main button span {
@@ -21,6 +22,7 @@ main button span {
 	width: fit-content;
 	max-width: 89%;
 	margin: auto;
+	white-space: nowrap;
 }
 
 main button.selected {
